@@ -32,6 +32,8 @@ cod-tools (unreleased)
       - adjusted signed and unsigned integer types in cif_grammar.y,
         cif2_grammar.y and datablock.c;
       - fixed a memory leak due to non-free()d buffers.
+    - pycodcif:
+      - converting incorrect UTF-8 bytes to U+FFFD for Python 3.
 
 cod-tools (2.5)
 
